fix: solving letter spacing problem

--- a/style.css
+++ b/style.css
@@ -35,10 +35,11 @@ body {
 .card {
   min-width: 32rem;
   width: 32rem;
+  height: 49.7rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 1rem;
+  border-radius: 2rem;
   background-color: var(--color-white);
   box-shadow: var(--shadow-card);
 }
@@ -68,7 +69,9 @@ body {
   text-align: center;
   font-weight: 700;
   font-size: 2.2rem;
-  line-height: 27.72px;
+  line-height: 28px;
+  max-width: 28.8rem;
+  letter-spacing: -0.5px;
   color: var(--color-dark-navy);
 }
 
